# epub-reader

./: Cargo.toml  README.md  README_en.md
src/: epub_parser.rs  fs_utils.rs  html_gen.rs  llm_client.rs  main.rs  markdown_parser.rs  parse_utils.rs  parser.rs  state.rs  text_parser.rs  types.rs  ui.rs
