[package]
name = "epub-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
epub = "1.2"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
slug = "0.1"
anyhow = "1"
indicatif = "0.17"
html-escape = "0.2"
pulldown-cmark = "0.12"
syntect = "5"
